another round of warnings
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>